--- a/Music play/styles.css
+++ b/Music play/styles.css
@@ -500,5 +500,198 @@ header .item-playlist {
     color: #6e8ffb;
 }
 
+/* form đăng nhập đăng ký */
+.modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    animation: fadeIn linear 0.1s ;
+}
 
+.modal.none {
+    display: none;
+}
 
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.modal__overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.modal__body {
+    background-color: #fff;
+    margin: auto;
+    position: relative;
+    z-index: 1;
+    border-radius: 5px;
+}
+
+.auth-form {
+    width: 500px;
+    overflow: hidden;
+}
+
+.auth-form.remove {
+    display: none;
+}
+
+.auth-form-login {
+    width: 500px;
+    overflow: hidden;
+    display: none;
+}
+
+.auth-form-login.open {
+    display: block;
+}
+
+.auth-form__container {
+    padding: 32px;
+}
+
+.auth-form__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 12px;
+    margin: 6px 0;
+}
+
+.auth-form__heading {
+    font-size: 22px;
+    font-weight: 400;
+
+}
+
+.auth-form__switch {
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #fff;
+    border: #fff;
+    color: #3460f5;
+    font-weight: 500;
+}
+
+.auth-form__switch-regist {
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #fff;
+    border: #fff;
+    color: #3460f5;
+    font-weight: 500;
+}
+
+.auth-form__input {
+    width: 100%;
+    height: 40px;
+    margin-top: 16px ;
+    padding: 0 12px;
+    font-size: 14px;
+    border-radius: 2px;
+    border: 1px solid #bdbdbd;
+    outline: none;
+
+}
+
+.auth-form__input:focus{
+    border-color: #333;
+}
+
+.auth-form__aside {
+    margin-top: 20px;
+}
+
+.auth-form__policy-text {
+    font-size: 12px;
+    text-align: center;
+}
+
+.auth-form__policy-link {
+    text-decoration: none;
+    color:#3460f5 ;
+}
+
+.auth-form__control {
+    margin-top: 30px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.btn-auth {
+    min-width: 142px;
+    height: 36px;
+    background-color:#3460f5 ;
+    color: #fff;
+    border: none;
+    border-radius: 2px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.auth-form__socials {
+    display: flex;
+    text-decoration: none;
+    padding: 12px 36px;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+.btn-social {
+    text-decoration: none;
+    height: 32px;
+    align-items: center;
+    display: flex;
+    align-items: center;
+}
+
+.auth-form__socials-icon {
+    font-size: 18px;
+    margin-right: 16px;
+}
+
+.auth-form__socials--facebook {
+    color: #fff;
+    background-color: #3A5A98;
+    padding: 0 20px;
+    border-radius: 2px;
+}
+
+.auth-form__socials--google {
+    background-color: #c43a30;
+    padding: 0 20px;
+    border-radius: 2px;
+    color: #fff;
+}
+
+.auth-form__socials-title {
+    font-size: 14px;
+    margin: 0 5px;
+}
+
+.auth-form__help-link {
+    display: flex;
+    justify-content: flex-end;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.auth-form__aside {
+    display: flex;
+}
